--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:name=".DialogActivity"
             android:label="@string/title_activity_dialog"
             android:theme="@style/DialogTheme" />
+        <activity
+            android:name=".DestinationActivity"
+            android:label="@string/title_destination_activity"
+            android:theme="@style/DestinationDialogTheme" />
     </application>
 
 
